# Boundcraft

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt
cmake/: boundcraftConfig.cmake.in
include/Boundcraft/: policy.hpp  searcher.hpp  traits.hpp
include/Boundcraft/details/: lower-bound-gallop-impl.hpp  lower-bound-hybrid-impl.hpp  lower-bound-standard-impl.hpp  util.hpp
include/hybridSearch/: policy.hpp  searcher.hpp  traits.hpp
include/hybridSearch/details/: lower-bound-gallop-impl.hpp  lower-bound-hybrid-impl.hpp  lower-bound-standard-impl.hpp
tests/: CMakeLists.txt  test.cpp
